src/objects/CSM_QI_Data_Portal_Queue_User_details__c.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <label>Account Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Portal Queue User details</relationshipLabel>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Current_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Current Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMDB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSM-1206 IVP maintain CMDB record for CSH Account, Contact and Product</description>
        <label>CMDB</label>
        <referenceTo>CMDB__c</referenceTo>
        <relationshipLabel>Data Portal Queue User details</relationshipLabel>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSH_Sub_Type__c</fullName>
        <label>CSH Sub Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ActivityPlan</fullName>
                </value>
                <value>
                    <fullName>DATACase</fullName>
                </value>
                <value>
                    <fullName>TechnologyCase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Subtype_1__c</fullName>
        <label>SubType 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subtype_3__c</fullName>
        <label>SubType 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Data Portal Queue User details</relationshipLabel>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_User_Type__c</fullName>
        <label>Contact User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HO User</fullName>
                </value>
                <value>
                    <fullName>Rep User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IQVIA_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IQVIA User</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>IQVIA User should be Active</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Data_Portal_Queue_User_details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_InDirect_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is InDirect Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOS__c</fullName>
        <label>LOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSM-1116 Product Segregation to show only selected product to CSH User in Customer Service Hub</description>
        <label>Product Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.SpecificToCSM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Data Portal Queue User details</relationshipLabel>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <formula>Queue_User_Relationship__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_User_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queue User Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Queue_User_Relationship__c.Type__c</field>
                <operation>equals</operation>
                <value>Queue</value>
            </filterItems>
            <infoMessage>Please Select the Queue user Relationship type as queue</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Queue_User_Relationship__c</referenceTo>
        <relationshipLabel>Data Portal Queue User details</relationshipLabel>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceNow_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSM-1206 IVP maintain Servicenow record for CSH Account, Contact and Product</description>
        <label>ServiceNow Group</label>
        <referenceTo>ServiceNow_Group__c</referenceTo>
        <relationshipLabel>Data Portal Queue User details</relationshipLabel>
        <relationshipName>Data_Portal_Queue_User_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceNow_Type__c</fullName>
        <description>CSM-1206 IVP Product Restriction to update Case ServiceNow Type field</description>
        <label>ServiceNow Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CSM-1116 Product Segregation to show only selected product to CSH User in Customer Service Hub. differentiate the CSH queue assignment and Product restriction functionality in CSH</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue Assignment</fullName>
                    <default>true</default>
                    <label>Queue Assignment</label>
                </value>
                <value>
                    <fullName>Product Level Restriction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserStatus__c</fullName>
        <formula>IQVIA_User__r.IsActive</formula>
        <label>User Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Portal Queue User details</label>
    <listViews>
        <fullName>DATACase_CSH_Queue_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Case_Subtype_3__c</columns>
        <columns>Account__c</columns>
        <columns>ClientContact__c</columns>
        <columns>Queue_User_Relationship__c</columns>
        <columns>IQVIA_User__c</columns>
        <columns>All_Current_Users__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CaseRecordType__c</columns>
        <columns>QueueName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>DATACase</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Queue Assignment</value>
        </filters>
        <label>DATACase CSH Queue Assignment</label>
    </listViews>
    <listViews>
        <fullName>TECH_Restriction_Queue_Assignment_IVP</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>QueueName__c</columns>
        <columns>Product__c</columns>
        <columns>ProductId__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CMDB__c</columns>
        <columns>ClientContact__c</columns>
        <columns>ServiceNow_Group__c</columns>
        <columns>Type__c</columns>
        <columns>CSH_Sub_Type__c</columns>
        <columns>ServiceNow_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>TechnologyCase</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Level Restriction</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>IVP</value>
        </filters>
        <label>TECH Restriction Queue Assignment IVP</label>
    </listViews>
    <listViews>
        <fullName>Tech_CSH_Assignment_SmartSolve</fullName>
        <columns>NAME</columns>
        <columns>AccountCountry__c</columns>
        <columns>Account__c</columns>
        <columns>CSH_Sub_Type__c</columns>
        <columns>Queue_User_Relationship__c</columns>
        <columns>Order__c</columns>
        <columns>Product__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>TechnologyCase</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Queue Assignment</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>smartsolve</value>
        </filters>
        <label>Tech CSH Assignment SmartSolve</label>
    </listViews>
    <listViews>
        <fullName>Tech_Product_Level_Restriction</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountName__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>ClientContact__c</columns>
        <columns>ContactUser__c</columns>
        <columns>CSH_Sub_Type__c</columns>
        <columns>IQVIA_User__c</columns>
        <columns>Order__c</columns>
        <columns>Product__c</columns>
        <columns>ProductId__c</columns>
        <columns>QueueName__c</columns>
        <columns>ServiceNow_Group__c</columns>
        <columns>Case_Subtype_3__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Level Restriction</value>
        </filters>
        <label>Tech Product Level Restriction</label>
    </listViews>
    <listViews>
        <fullName>TechnologyCase_CSH_Queue_Assignment</fullName>
        <columns>NAME</columns>
        <columns>AccountCountry__c</columns>
        <columns>Account__c</columns>
        <columns>CSH_Sub_Type__c</columns>
        <columns>Queue_User_Relationship__c</columns>
        <columns>Order__c</columns>
        <columns>Product__c</columns>
        <columns>CaseRecordType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CaseRecordType__c</field>
            <operation>equals</operation>
            <value>TechnologyCase</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>hemocu</value>
        </filters>
        <label>TechnologyCase CSH Queue Assignment</label>
    </listViews>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>CSM QI Data Portal  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Portal Queue User details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR01_DATA_Contact_Account_Same</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(CaseRecordType__c , &apos;DATACase&apos;), Is_InDirect_Account__c == false , All_Current_Users__c = false, Account__c &lt;&gt; ClientContact__r.AccountId,
OR(Order__c == 2,Order__c == 3))</errorConditionFormula>
        <errorMessage>Selected Contact is not associated with the Selected Account.Please Select the right Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR02_Product_Level_Restriction_Mandatory</fullName>
        <active>true</active>
        <description>CSM-1206 Mandatory Fields for Product Level Restriction</description>
        <errorConditionFormula>AND( NOT(ISNEW()), ISPICKVAL( Type__c , &apos;Product Level Restriction&apos;) , OR(ISBLANK(Account__c), ISBLANK( ClientContact__c),
ISBLANK( ProductId__c ), ISBLANK( Product__c ),
ISBLANK(ServiceNow_Group__c ),
ISBLANK(TEXT(ServiceNow_Type__c))))</errorConditionFormula>
        <errorMessage>Account, Contact, Product Name, Product, ServiceNow Group, and ServiceNow Type fields are mandatory when you select Type as Product Level Restriction</errorMessage>
    </validationRules>
</CustomObject>